# finance-advisor-be

./: .env.example  CLAUDE.md  Dockerfile  PLAN.md  main.py  pyproject.toml
app/: auth.py  auth_router.py  config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  logging_config.py  main.py
app/advisor/: __init__.py  orchestrator.py  prompts.py  router.py  schemas.py  service.py  tools.py
app/advisor/subgraphs/advice_generation/: __init__.py  graph.py  nodes.py  state.py
app/advisor/subgraphs/budget_analysis/: __init__.py  graph.py  nodes.py  state.py
app/advisor/subgraphs/financial_analysis/: __init__.py  graph.py  nodes.py  state.py
app/advisor/subgraphs/market_analysis/: __init__.py  graph.py  nodes.py  state.py
app/advisor/subgraphs/rule_evaluation/: __init__.py  graph.py  nodes.py  state.py
app/budgets/: repository.py  router.py  schemas.py  service.py
app/context/: repository.py  router.py  schemas.py  service.py
app/event_store/: models.py  projections.py  repository.py  schemas.py  service.py
app/llm/: __init__.py  config.py  factory.py
app/market/: __init__.py  router.py  schemas.py  service.py
app/market/providers/: __init__.py  base.py  yahoo_finance.py
app/sentiment/: __init__.py  router.py  schemas.py  service.py
app/trades/: __init__.py  router.py  schemas.py  service.py
app/transactions/: models.py  repository.py  router.py  schemas.py  service.py
app/transactions/importers/: __init__.py  base.py  csv_importer.py  image_importer.py  pdf_importer.py  schemas.py  service.py
(+4 files in other folders)
